--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
     font-family: 'Noto Sans', sans-serif;
 }
 
+body {
+    height: 100vh;
+    width: 100%;
+}
 
 .area-login {
     height: 100vh;
